# flipper-program

./: .eslintrc.js  .gitignore  Anchor.toml  README.md  hamRNY1AjpqcjKqHHMi6ump7rSJafQSKKVKCFzC5oQ7.json  jest.config.js  jest.config.ts  package.json  tsconfig.build.json  tsconfig.json
.github/workflows/: release-packages.yml
keys/devnet/: authority-keypair.json  deployer-keypair.json
keys/mainnet/: program-keypair.json
programs/flipper-program/: Cargo.toml
programs/flipper-program/src/: lib.rs  utils.rs
scripts/: deploy-program.sh  setup.sh  test.sh
src/: index.ts
src/constants/: AccountConstants.ts  PdaConstants.ts  ProgramIds.ts
src/parse/: decodeFlipperIx.ts  decodeIxWithIdl.ts  parseCreateBettorInfoIx.ts  parseFlipIx.ts  parsePayoutIx.ts  parsePlaceBetIx.ts
src/sdk/: FlipperSdk.ts
src/sdk/instructions/: createAuctionHouseIx.ts  createBettorInfoIx.ts  flipIx.ts  payoutIx.ts  placeBetIx.ts  updateAuctionHouseIx.ts  withdrawFromTreasuryIx.ts
src/tests/: auctionHouseSol.test.ts  bettingSol.test.ts  parse.test.ts
src/tests/constants/: FeeLamports.ts
src/tests/setup/: setup.ts
src/tests/utils/: expectToThrow.ts  getAccountLamports.ts  requestAirdrops.ts  sendTransactionForTest.ts
src/types/: AnchorWallet.ts  UtilityTypes.ts
src/utils/: getAccountsForEnvironment.ts
src/utils/pdas/: findAtaPda.ts  findAuctionHousePda.ts  findAuctionHouseTreasuryPda.ts  findBettorInfoPaymentAccountPda.ts  findBettorInfoPda.ts
src/utils/solana/: arePublicKeysEqual.ts  getWalletIfNativeElseAta.ts  isNative.ts  ixsToTx.ts
