[package]
name = "flipper-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "flipper_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
spl-token = { version = "3.2", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0.3", features = [
  "no-entrypoint",
] }
mpl-token-metadata = { version = "1.2.4", features = ["no-entrypoint"] }
thiserror = "1.0"
arrayref = "0.3.6"
num-traits = "0.2"
num-derive = "0.2"
